# timelimiter

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements-test.txt
.github/workflows/: test.yml
tests/: benchmark.py  manual_test_time_limiter.py  test_counter.py  test_time_limiter.py  test_timeout_handler.py
timelimiter/: counter.py  event_loop.py  exceptions.py  time_limiter.py  timeout_handler.py
